05_longhorn_storage/02_longhorn_ui_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-cloud-basic-auth@kubernetescrd, kube-system-redirect-https@kubernetescrd

spec:
  rules:
    - host: longhorn.cloud.equino.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - secretName: longhorn-tls
      hosts:
        - longhorn.cloud.equino.ovh
